<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by Team Symphony on 4/24/23, 3:50 AM
  ~  Copyright (c) 2023 . All rights reserved.
  ~  Last modified 4/24/23, 3:49 AM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_workoutBuilderActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".ui.WorkoutRoutineActivity">

    <LinearLayout
        android:id="@+id/routineScreenView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/routineScreenButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dropshadow_background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/routineNameEditText"
                android:layout_width="221dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/label_routine_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColorHint="@color/material_dynamic_neutral40">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/workoutPlaylistEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/workout_playlist"
                        android:inputType="text|textShortMessage"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/openPlaylistButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/button_play" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/workoutListPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/placeholder_exercise_list"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/workoutListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/routineScreenButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dropshadow_background"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routineScreenView">

        <Button
            android:id="@+id/startWorkoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2dp"
            android:text="@string/button_start_workout" />

        <Button
            android:id="@+id/newExerciseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2dp"
            android:text="@string/button_add_exercise" />

        <Button
            android:id="@+id/saveWorkoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2dp"
            android:text="@string/button_save_routine" />

        <Button
            android:id="@+id/deleteWorkoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="2dp"
            android:text="@string/button_delete_routine" />


    </GridLayout>

    <ProgressBar
        android:id="@+id/loadingSpinner"
        style="@android:style/Widget.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />




</androidx.constraintlayout.widget.ConstraintLayout>