<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by Team Symphony on 4/24/23, 3:50 AM
  ~  Copyright (c) 2023 . All rights reserved.
  ~  Last modified 4/24/23, 3:49 AM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_homeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    tools:context=".ui.HomeActivity">

    <LinearLayout
        android:id="@+id/homeScreenView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/userLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dropshadow_background"
            android:elevation="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/homeProfilePicture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="6dp"
                android:layout_weight="0"
                android:contentDescription="@string/profile_picture"
                app:srcCompat="@drawable/placeholder_profile_picture"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/homeWelcomeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="#616161" />

                    <TextView
                        android:id="@+id/homeNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PLACEHOLDER_TEXT"
                        android:textSize="34sp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

            <ImageView
                android:id="@+id/settingsCog"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/settings"
                tools:ignore="ContentDescription,HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/scheduleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_schedule"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/pastWorkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_old_workout" />

            <Button
                android:id="@+id/workoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_workout"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeHistoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_workout_history"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/historyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingSpinner"
        style="@android:style/Widget.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>