...
  ~  Last modified 4/24/23, 3:49 AM
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_selectionActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RoutineSelectionActivity">

    <LinearLayout
        android:id="@+id/selectionScreenView"
...
            android:layout_weight="2"
            android:foregroundGravity="top">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/newWorkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="24dp"
            android:text="@string/button_new_workout" />
    </LinearLayout>
...
